updated for sudoers

--- a/ansible.cfg
+++ b/ansible.cfg
@@ -11,7 +11,7 @@
 
 # some basic default values...
 
-inventory      = /var/lib/awx/projects/_23__dr1_ansible_dev/hosts/
+inventory      = /home/dmoody/ansible_code/Ansible/hosts/
 library        = /usr/share/my_modules/
 module_utils   = /usr/share/my_module_utils/
 remote_tmp     = ~/.ansible/tmp
@@ -66,7 +66,7 @@ gather_subset = all
 # inject_facts_as_vars = True
 
 # additional paths to search for roles in, colon separated
-roles_path    = /var/lib/awx/project/_23__dr1_ansible_dev/roles/
+roles_path    = /home/dmoody/ansible_code/Ansible/roles/
 
 # uncomment this to disable SSH key host checking
 #host_key_checking = False
@@ -133,7 +133,7 @@ jinja2_extensions = jinja2.ext.do,jinja2.ext.i18n
 
 # if set, always use this private key file for authentication, same as
 # if passing --private-key to ansible or ansible-playbook
-private_key_file = /var/lib/awx/.ssh/ansible.pem
+private_key_file = /home/dmoody/.ssh/ansible.pem
 
 # If set, configures the path to the Vault password file as an alternative to
 # specifying --vault-password-file on the command line.
