--- a/group_vars/CpFiles.yml
+++ b/group_vars/CpFiles.yml
@@ -2,16 +2,16 @@
 # vars file for CpFiles---
 
 files:
-# - src: /var/lib/awx/projects/_23__dr1_ansible_dev/files/ulimits
-#   dest: /etc/ulimits
-#   owner: root
-#   group: wheel
-#   mode: 644
-#   backup: yes
-
- - src: /var/lib/awx/projects/_23__dr1_ansible_dev/files/authorized_keys
-   dest: /home/dtrump/.ssh/
-   owner: dtrump
-   group: dtrump
-   mode: 600
+ - src: /home/dmoody/ansible_code/Ansible/files/sudoers
+   dest: /etc/sudoers
+   owner: root
+   group: wheel
+   mode: 440
    backup: yes
+
+# - src: /var/lib/awx/projects/_23__dr1_ansible_dev/files/authorized_keys
+#   dest: /home/dtrump/.ssh/
+#   owner: dtrump
+#   group: dtrump
+#   mode: 600
+#   backup: yes
