--- a/main_playbook.yml
+++ b/main_playbook.yml
@@ -1,5 +1,5 @@
 ---
- - name:  apply configuration to informatica servers
+ - name:  apply configuration
    hosts: all
    gather_facts: yes
    become: True
@@ -7,7 +7,7 @@
    become_user: root
    remote_user: ansible
    vars:
-     ansible_ssh_private_key_file: /var/lib/awx/.ssh/ansible.pem
+     ansible_ssh_private_key_file: /home/dmoody/.ssh/id_ed25519 
 
    roles:
 #     - common
@@ -16,11 +16,11 @@
 #     - Sudoers
 #     - MkDir
 #     - ChgPerms
-#     - CpFiles
+     - CpFiles
 #     - FetchFiles
 #     - CmdRoot
 #     - CmdUser
-     - CmdOS
+#     - CmdOS
 #     - ReachableHosts
 #     - SWInstall
 #     - SrvEnable
